[project]
name = "codegen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastembed>=0.6.1",
    "gradio>=5.25.1",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-ollama>=0.3.1",
    "langchain-qdrant>=0.2.0",
    "ollama>=0.4.7",
    "qdrant-client>=1.13.3",
]

[dependency-groups]
dev = [
    "iprogress>=0.4",
    "ipykernel>=6.29.5",
    "nvitop>=1.4.2",
]
